--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Mais Sobre os Projetos</a>
                     <ul id="ul-dp">
                         <li><a href="#">Inner Join</a></li>
-                        <li><a href="#">All e Any</a></li>
+                        <li><a href="conteudo/select_all_any.html">All e Any</a></li>
                         <li><a href="#">Exists</a></li>
                         <li><a href="#">In</a></li>
                         <li><a href="#">Group By e Having</a></li>
