--- a/index.html
+++ b/index.html
@@ -21,27 +21,29 @@
                 <li><a href="#main">Início</a></li>
                 <li><a href="#">Mais Sobre os Projetos</a>
                     <ul id="ul-dp">
-                        <li><a href="#">Inner Join</a></li>
                         <li><a href="conteudo/select_all_any.html">All e Any</a></li>
-                        <li><a href="#">Exists</a></li>
+                        <li><a href="conteudo/select_exists/select_exists.html">Exists</a></li>
+                        <li><a href="conteudo/select_order_by/select_order_by.html">Order By</a></li>
+                        <li><a href="conteudo/select_from/select_from.html">Select From</a></li>
+                        <li><a href="conteudo/delete/delete.html">Delete</a></li>
+                        <li><a href="conteudo/update/update.html">Update</a></li>
+                        <li><a href="conteudo/insert/insert.html">Insert</a></li>
+                        <li><a href="conteudo/drop_table/drop_table.html">Drop Table</a></li>
+                        <li><a href="conteudo/alter_table/alter_table.html">Alter Table</a></li>
+                        <li><a href="conteudo/tipo_textual/tipo_dados_textuais.html">Tipo de Dados Textuais</a></li>
+                        <li><a href="conteudo/create_table/create_table.html">Create Table</a></li>
+                        <!--
+                        <li><a href="#">Inner Join</a></li>
                         <li><a href="#">In</a></li>
                         <li><a href="#">Group By e Having</a></li>
                         <li><a href="#">Limit</a></li>
-                        <li><a href="#">Order By</a></li>
                         <li><a href="#">Operadores Lógicos</a></li>
                         <li><a href="#">Operadores Relacionais</a></li>
-                        <li><a href="#">Select From</a></li>
-                        <li><a href="#">Delete</a></li>
-                        <li><a href="#">Update</a></li>
-                        <li><a href="#">Insert</a></li>
-                        <li><a href="#">Drop Table</a></li>
-                        <li><a href="#">Alter Table</a></li>
                         <li><a href="#">Tipo de Dado Serial</a></li>
                         <li><a href="#">Tipo de Dado Booleano</a></li>
                         <li><a href="#">Tipo de Dados de Data</a></li>
                         <li><a href="#">Tipo de Dados Numéricos</a></li>
-                        <li><a href="#">Tipo de Dados Textuais</a></li>
-                        <li><a href="#">Create Table</a></li>
+                        -->                        
                     </ul>
                 <li><a href="#priv">Políticas de Privacidade</a></li>
                 <li><a href="#forms">Contato</a></li>
